# RT

./: .gitignore  CMakeLists.txt  CMakeLists21.txt  CMakeLists_Lena.txt  CMakeLists_Vova.txt  Makefile  README.md  RT  RTv1  a.out  author  cl_build  cl_include.h  compile.sh  debug.sh  example_gui.c  example_theme.c  global.h  gtk_install.txt  gtk_resources.txt  info.txt  main.c  mlx_keys.h  montelight.cc  options.h  parameters.h  test.json
accelerated_mesh/: accelerated_mesh.h  accelerated_mesh_delete.c  accelerated_mesh_intersect.c  accelerated_mesh_new.c
assert/: assert.h
brdf/: brdf.c  brdf.h
camera/: camera.c  camera.h  camera_build_ray.c  camera_delete.c  camera_focus.c  camera_move.c  camera_new.c
cl_parameters/: cl_compilation.h  cl_float.h
cl_renderer/: cl_build.c  cl_options.h  cl_renderer.h  cl_renderer_camera_move.c  cl_renderer_create_kernel.c  cl_renderer_create_program.c  cl_renderer_create_queue.c  cl_renderer_init_context.c  cl_renderer_init_data.c  cl_renderer_init_device.c  cl_renderer_log.c  cl_renderer_new.c  cl_renderer_render.c  cl_renderer_set_arguments.c  cl_renderer_update.c
cl_source/: cl_camera  cl_main  cl_object_sphere  cl_radiance  cl_radiance_explicit  cl_random  cl_ray  cl_sample
color/: color.c  color.h  color_correct.c  color_list.h  color_unpack.c
console/: console.c  console.h  console_diffuse.c  console_parallel.c  console_reflect.c  console_refract.c  console_reset.c  console_shadows.c  console_specular.c  console_translate.c  cosnole_tshadows.c
disruptions/: CMakeLists.txt  disruptions.h  main.c  preferences.h
disruptions/perlin_noise/: perlin_noise.h  perlin_noise_generator.c  perlin_noise_math.c
disruptions/sdl/: sdl_delete.c  sdl_error.c  sdl_init.c  sdl_my.h  sdl_new.c  sdl_put_image.c  sdl_upload.c
disruptions/vector2/: vector2.c  vector2.h
error_framework/: error_framework.h  rt_assert_x.c  rt_malloc.c  rt_print_error.c  rt_print_x.c  rt_raise_x.c
filter/: filter.h  filter_jitter_sample.c
float_macro/: float_macro.h
ft_assert/: ft_assert.c  ft_assert.h
gui/: build.glade  gui_names.h
includes/: camera.h  color.h  color_list.h  intersection.h  light.h  material.h  open_cl.h  parameters.h  shape_list.h  vector3.h
intersection/: intersection.c  intersection.h  intersection_calculate.c  intersection_reflect.c  intersection_refract.c
json/: CMakeLists.txt  test.c  test.json
kd_tree/: kd_tree.h  kd_tree_array_add.c  kd_tree_array_create.c  kd_tree_array_find_median.c  kd_tree_bb_create.c  kd_tree_bb_find_cut_axis.c  kd_tree_bb_find_triangle_side.c  kd_tree_bb_intersect.c  kd_tree_build.c  kd_tree_destroy.c  kd_tree_intersect.c  kd_tree_node_create.c
libft/: .makefile.swp  Makefile  sources_list.txt
light/: light.c  light.h
manual/: #build_3.glade#  .main.c.swp  bin  build_2.glade  build_2.glade~  build_3.glade  build_3.glade~  compile.sh  main.c  run  run.sh
material/: material.c  material.h  material_list.h
mesh/: mesh.h  mesh_delete.c  mesh_intersect.c  mesh_new.c  mesh_parser.h  triangle.h  triangle_create.c  triangle_intersect.c
mlx/: mlx_keys.h
nuklear/: Makefile
obj_parser/: open_file.c  open_file.h  test.c
object/: object_build.c  object_build.h  object_definition.h  object_interaction.h  object_intersect.c  object_type.h
object_list/: object_data.h  object_list.h  plane.c  sphere.c
open_cl/: old.cl  open_cl.c  open_cl.h  open_cl_alloc_device_data.c  open_cl_create_context.c  open_cl_create_device.c  open_cl_create_kernel.c  open_cl_create_program.c  open_cl_create_queue.c  open_cl_error.c  open_cl_set_arguments.c  program.cl
open_cl_manager/: open_cl_manager.h  open_cl_manager_create_program.c  open_cl_manager_delete.c  open_cl_manager_init_context.c  open_cl_manager_init_device.c  open_cl_manager_new.c
parameters/: rt_cl_compilation.h  rt_cl_include.h  rt_control.h  rt_float.h  rt_parameters.h  rt_sources_cl.h  rt_sources_gui.h  rt_sources_texture.h
ray/: ray.c  ray.h  ray_calculate.c
references/: MC for improved rendering.webloc  links.txt
renderer/: renderer.h  renderer_build_ray.c  renderer_check_interval.c  renderer_check_upload.c  renderer_delete.c  renderer_frame.c  renderer_loop.c  renderer_new.c  renderer_pixel.c  renderer_radiance.c  renderer_radiance_light.c  renderer_run.c  renderer_update_frame.c  renderer_write_radience.c
reserve/: CMakeLists.txt  parameters.h  program.cl
reserve/color/: color.h
reserve/intersection/: intersection.h
reserve/light/: light.c  light.h
reserve/open_cl/: open_cl.c  open_cl.h  open_cl_alloc_device_data.c  open_cl_create_device.c  open_cl_create_kernel.c  open_cl_create_program.c  open_cl_error.c  open_cl_set_arguments.c  temp
reserve/ray/: ray.h
reserve/rt/: rt.c
reserve/scene/: scene.h  scene_a.c  scene_list.h
reserve/shape/: shape.h  shape_cylinder.c  shape_list.h  shape_plane.c
reserve/vector3/: vector3.h
rp/: rp.c  rp.h  rp_hooks.c  rp_render.c
rt/: rt.c  rt.h  rt_clone.c  rt_consistent.c  rt_control.c  rt_mlx.c  rt_parallel.c  rt_parallel.cl
sampler/: sampler.c  sampler.h  sampler_cosine.c  sampler_transform.c  sampler_uniform.c
scene/: scene.c  scene.h  scene_a.c  scene_b.c  scene_c.c  scene_d.c  scene_e.c  scene_f.c  scene_get_space.c  scene_intersect.c  scene_lights.c  scene_list.h  scene_new.c  scene_shapes.c
scenes/: box_default.json  cornell.json  cornell_basic.json  cornell_default.json  cornell_glass.json  cornell_mirror.json  cornell_soft.json  csg.json  csg_a.json  csg_b.json  example.json  explosion.json  julia.json  limited.json  mandelbulb.json  moebius.json  perforated_cube.json  spheres.json  test.json  texture.json  torus.json  tree.json
sdl_ctrl/: cdl_ctrl_new.c  sdl_ctrl.h  sdl_ctrl_delete.c  sdl_ctrl_error.c  sdl_ctrl_init.c  sdl_ctrl_upload.c
shape/: shape.c  shape.h  shape_aabb.c  shape_cone.c  shape_cylinder.c  shape_disk.c  shape_list.h  shape_moebius.c  shape_moebius.h  shape_moebius_equation.c  shape_paraboloid.c  shape_plane.c  shape_sphere.c  shape_sphere.s  shape_triangle.c
sources/: BRDF lightning.webloc  Metropolis.webloc  links.txt
vector3/: malloc.c  (+16 more)
(+866 files in other folders)
